--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -27,6 +31,24 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
+  flex-direction: row;
+}
+
+.links {
+  display: flex;
+  gap: 16px;
+  flex-direction: row;
+}
+
+.left {
+  display: flex;
+  gap: 16px;
+  flex-direction: row;
 }
 
 button {
