--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -50,10 +50,36 @@ body {
   padding: 0;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+}
+
+.header {
+  font-weight: 900;
+  font-size: larger;
+  margin: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.text {
+  margin: 16px;
+  margin-top: -10px;
+}
+
+.icon {
+  margin: 12px;
+}
+.close-button {
+  
+}
+
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin: 5px;
 }
 
 button.continue {
